--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -32,7 +32,7 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{cancel}
-\usepackage[colorlinks=true,linkcolor=black]{hyperref}
+\usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 \def\chapterautorefname{Chapter}
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Section}
